Refactor and add FileReader